# cobalt

chrome/updater/: BUILD.gn
chrome/updater/cobalt/: BUILD.gn  updater_sandbox.cc
cobalt/: BUILD.gn
components/update_client/: BUILD.gn
starboard/loader_app/: BUILD.gn
